--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto artigo 001</p>
+            <h2>Curso de HTML5 e CSS3</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sint dolore pariatur eligendi quo rem tenetur, molestias molestiae, culpa laborum impedit adipisci cum provident excepturi dignissimos quam. Nulla optio necessitatibus repellendus.</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias ea natus, eius quibusdam quos consequatur laborum asperiores quasi, suscipit sunt officiis saepe magnam quisquam cum laudantium. Fuga provident ad natus.</p>
         </article>
     </main>
     
